feat: calendar dots on timeline

--- a/index.html
+++ b/index.html
@@ -349,14 +349,14 @@
           border-radius:8px;
         }
 /* draggable-image thumbnails – keep aspect ratio, max 150 px */
-.draggable-image img{
-  display:block;
-  max-width:150px;
-  max-height:150px;
-  width:auto;
-  height:auto;
-  object-fit:contain;
-  border-radius:4px;
+.draggable-image img {
+  display: block;
+  max-width: 300px !important;
+  max-height: 300px !important;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  border-radius: 4px;
 }
 
 /* ελαφρύ εναλλάξ “πετάρισμα” για πολορόιντ αισθητική */
